2016-03-22  Gerrit Holl  <g.holl@reading.ac.uk>

	* typhon/datasets/dataset.py:

	- Raise a specific exception with a helpful error message if mandatory
	fields are missing or have invalid values.

2016-03-22  Gerrit Holl  <g.holl@reading.ac.uk>

	* typhon/datasets/dataset.py:

	- Don't require name, fallback to attribute then to class name.

2016-03-21  Gerrit Holl  <g.holl@reading.ac.uk>

	* typhon/utils/metaclass.py:

	- When inheriting a docstring, state what class the docstring was
	inherited from.

2016-03-18  Gerrit Holl  <g.holl@reading.ac.uk>

	* typhon/datasets/dataset.py(Dataset.read_period):

	- Add filtering ability to reading long period.

2016-03-18  Gerrit Holl  <g.holl@reading.ac.uk>

	* typhon/math/array.py(limit_ndarray):

	- New function to select elements from structured ndarray based on
	ranges.  Inspired by a similar function in atmlab.

2016-03-18  Oliver Lemke  <olemke@core-dump.info>

	* typhon/__init__.py: Improve revision regex.

2016-03-18  Oliver Lemke  <olemke@core-dump.info>

	* typhon/__init__.py:

	Improved version number handling. The svn revision number was not
	correctly updated (reported by Gerrit).
	The current svn revision is now extracted from 'svn info' for
	development versions and appended to the installed package version.
	However, because the svn version cannot be determined for installed
	packages, typhon.__version__ has the string '+dev' appended for
	development versions.

	This also changes the convention for version number increases. The
	version number is now increased before release, not after.

2016-03-17  Gerrit Holl  <g.holl@reading.ac.uk>

	* typhon/datasets/dataset.py:

	(Dataset): Make Dataset class semi-singleton.  For a particular class, there
	should be only one object with the same name.  If one attempts to
	create one with an already-existing name, the existing object is
	returned.

	(Dataset.read_period): Add provision to pass on arguments to
	find_granules and to the reader.
	
	