@@ -1,3 +1,13 @@
+2016-03-24  Gerrit Holl  <g.holl@reading.ac.uk>
+
+	* typhon/datasets/dataset.py:
+
+	- Try to show a progressbar to show the progress on reading a large
+	amount of data.  Only works when the progressbar module is available —
+	see https://pypi.python.org/pypi/progressbar2
+
+	- Fig bug when no fields are mandatory.
+
 2016-03-22  Gerrit Holl  <g.holl@reading.ac.uk>
 
 	* typhon/datasets/dataset.py:
